--- a/index.ipynb
+++ b/index.ipynb
@@ -103,15 +103,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3 ## importing module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the SQL database and connect to it\n",
-    "\n",
+    "# sqlite3 planets.db ## supposed create database. but doesn't. !?\n",
+    "connection = sqlite3.connect('planets.db')\n",
+    "cursor = connection.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read in the contents of the create.sql file\n",
-    "\n",
-    "# Execute that SQL against your database\n"
+    "file = open(\"./create.sql\", 'r') # opens the SQL file\n",
+    "sql = file.read() # reads and returns the SQL statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x26ec3e02a40>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Execute that SQL against your database\n",
+    "cursor.executescript(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.close() # closes the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('table',\n",
+       "  'planets',\n",
+       "  'planets',\n",
+       "  2,\n",
+       "  'CREATE TABLE planets (\\nid INTEGER PRIMARY KEY,\\nname TEXT,\\ncolor TEXT,\\nnum_of_moons INTEGER,\\nmass REAL\\n)')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## checking existence (currently has no contents)\n",
+    "cursor.execute('''SELECT * FROM sqlite_master WHERE type='table';''').fetchall()"
    ]
   },
   {
@@ -130,11 +204,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Your code for reading and executing alter.sql"
+    "# Your code for reading and executing alter.sql\n",
+    "file = open(\"./alter.sql\", 'r')\n",
+    "sql = file.read()\n",
+    "cursor.executescript(sql)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('table',\n",
+       "  'planets',\n",
+       "  'planets',\n",
+       "  2,\n",
+       "  'CREATE TABLE planets (\\nid INTEGER PRIMARY KEY,\\nname TEXT,\\ncolor TEXT,\\nnum_of_moons INTEGER,\\nmass REAL\\n, rings BOOLEAN)')]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## checking existence\n",
+    "cursor.execute('''SELECT * FROM sqlite_master WHERE type='table';''').fetchall()"
    ]
   },
   {
@@ -176,11 +281,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to read in the SQL from insert.sql and execute it"
+    "# Your code to read in the SQL from insert.sql and execute it\n",
+    "file = open('./insert.sql', 'r')\n",
+    "sql = file.read()\n",
+    "cursor.executescript(sql)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Mercury', 'gray', 0, 0.55, 0),\n",
+       " (2, 'Venus', 'yellow', 0, 0.82, 0),\n",
+       " (3, 'Earth', 'blue', 1, 1.0, 0),\n",
+       " (4, 'Mars', 'red', 2, 0.11, 0),\n",
+       " (5, 'Jupiter', 'orange', 53, 317.9, 0),\n",
+       " (6, 'Saturn', 'hazel', 62, 95.19, 1),\n",
+       " (7, 'Uranus', 'light blue', 27, 14.54, 1),\n",
+       " (8, 'Neptune', 'dark blue', 14, 17.15, 1),\n",
+       " (9, 'Pluto', 'brown', 5, 0.003, 0)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## checking contents\n",
+    "cursor.execute('''SELECT * FROM planets;''').fetchall()"
    ]
   },
   {
@@ -196,11 +334,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code to read in the SQL from update.sql and execute it"
+    "# Your code to read in the SQL from update.sql and execute it\n",
+    "file = open('./update.sql', 'r')\n",
+    "sql = file.read()\n",
+    "cursor.executescript(sql)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Mercury', 'gray', 0, 0.55, 0),\n",
+       " (2, 'Venus', 'yellow', 0, 0.82, 0),\n",
+       " (3, 'Earth', 'blue', 1, 1.0, 0),\n",
+       " (4, 'Mars', 'red', 2, 0.11, 0),\n",
+       " (5, 'Jupiter', 'orange', 68, 317.9, 0),\n",
+       " (6, 'Saturn', 'hazel', 62, 95.19, 1),\n",
+       " (7, 'Uranus', 'light blue', 27, 14.54, 1),\n",
+       " (8, 'Neptune', 'dark blue', 14, 17.15, 1),\n",
+       " (9, 'Pluto', 'brown', 5, 0.003, 0)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## checking contents\n",
+    "cursor.execute('''SELECT * FROM planets;''').fetchall()"
    ]
   },
   {
@@ -219,11 +390,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Mercury', 'gray', 0, 0.55, 0),\n",
+       " (2, 'Venus', 'yellow', 0, 0.82, 0),\n",
+       " (3, 'Earth', 'blue', 1, 1.0, 0),\n",
+       " (4, 'Mars', 'red', 2, 0.11, 0),\n",
+       " (5, 'Jupiter', 'orange', 68, 317.9, 0),\n",
+       " (6, 'Saturn', 'hazel', 62, 95.19, 1),\n",
+       " (7, 'Uranus', 'light blue', 27, 14.54, 1),\n",
+       " (8, 'Neptune', 'dark blue', 14, 17.15, 1)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code to read in the SQL from delete.sql and execute it"
+    "# Your code to read in the SQL from delete.sql and execute it\n",
+    "file = open('./delete.sql', 'r')\n",
+    "sql = file.read()\n",
+    "cursor.executescript(sql)\n",
+    "file.close()\n",
+    "\n",
+    "## checking contents\n",
+    "cursor.execute('''SELECT * FROM planets;''').fetchall()"
    ]
   },
   {
@@ -313,6 +509,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,9 +532,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -343,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
